viewer/src/assets/scss/global.scss
/* ldgallery - A static generator which turns a collection of tagged
--             pictures into a searchable web gallery.
--
-- Copyright (C) 2019-2020  Guillaume FOUET
--               2020       Pacien TRAN-GIRARD
--
-- This program is free software: you can redistribute it and/or modify
-- it under the terms of the GNU Affero General Public License as
-- published by the Free Software Foundation, either version 3 of the
-- License, or (at your option) any later version.
--
-- This program is distributed in the hope that it will be useful,
-- but WITHOUT ANY WARRANTY; without even the implied warranty of
-- MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-- GNU Affero General Public License for more details.
--
-- You should have received a copy of the GNU Affero General Public License
-- along with this program.  If not, see <https://www.gnu.org/licenses/>.
*/

// Global CSS
@import "@/assets/scss/theme.scss";

// === Forms

.input {
  background-color: $input-background-color;
  color: $text !important;

  &::placeholder {
    color: $text-light !important;
  }
}

.required label::after {
  content: "*";
  color: red;
}

// === Tools

.nowrap {
  white-space: nowrap;
}
.no-scroll-x {
  overflow-x: hidden;
}

.flex {
  display: flex;
}
.flex-column {
  display: flex;
  flex-direction: column;
}
.flex-center {
  align-items: center;
}

// === Text

.link:hover {
  color: $link-hover;
}

.disabled {
  color: $disabled-color !important;
}

// === Scrollbar styling

.scrollbar {
  overflow: auto;
}
.scrollbar::-webkit-scrollbar {
  width: 8px;
  height: 8px;
}
.scrollbar::-webkit-scrollbar-corner {
  background-color: transparent;
}
.scrollbar::-webkit-scrollbar-thumb {
  background-color: $scrollbar-color;
}

// === Thumbnail tiles alignment

.thumbnail-tiles {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  justify-content: space-evenly;
  & > div {
    margin: 2px;
  }
}
img {
  image-orientation: from-image;
}

// === Effect to apply on lazy-image loading

img {
  display: block;
  &.v-lazy-image {
    opacity: 0;
    transition: opacity 0.4s;
  }
  &.v-lazy-image-loaded {
    opacity: 1;
  }
}

